[tool.poetry]
name = "advent2021"
version = "0.1.0"
description = ""
authors = ["knguyen5"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
lxml = "^4.6.4"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
